--- a/src/app/pages/nuevo-usuario/nuevo-usuario.component.html
+++ b/src/app/pages/nuevo-usuario/nuevo-usuario.component.html
@@ -1,1 +1,21 @@
-<p>nuevo-usuario works!</p>
+<div class="wrap">
+    <img src="assets/add-user.webp" alt="">
+    <div class="add-content">
+        <h1>REGISTRO DE USUARIO NUEVO</h1>
+        <h2>Rellena los campos para agregar un usuario nuevo</h2>
+        
+        <div class="add-content-row">
+            <label for="">Nombre</label>
+            <input type="text">
+        </div>
+        <div class="add-content-row">
+            <label for="">Nombre de usuario</label>
+            <input type="text">
+        </div>
+        <div class="add-content-row">
+            <label for="">Contraseña</label>
+            <input type="text">
+        </div>
+        <button class="btnAdd" routerLink="/login">Agregar usuario</button>        
+    </div>
+</div>
