--- a/src/app/pages/envio-mx/envio-mx.component.html
+++ b/src/app/pages/envio-mx/envio-mx.component.html
@@ -22,8 +22,8 @@
         </div>
     </div>
     }@else if(step == 2){
-        <h1>GENERAR ENVÍO DE MÉXICO A EEUU.</h1>
-        <div class="envio-content">
+    <h1>GENERAR ENVÍO DE MÉXICO A EEUU.</h1>
+    <div class="envio-content">
         <h2>Información del destinatario</h2>
         <div class="envio-content-row">
             <label for="">Nombre</label>
@@ -61,18 +61,53 @@
         </div>
     </div>
     }@else if(step == 3){
-        <h1>GENERAR ENVÍO DE MÉXICO A EEUU.</h1>
-        <div class="envio-content">
+    <h1>GENERAR ENVÍO DE MÉXICO A EEUU.</h1>
+    <div class="envio-content">
         <h2>Información del paquete</h2>
-        
+        <div class="card_cantainer">
+            @for (product of products; track $index) {
+            <div class="card">
+                <h2>Producto: {{product.nombre}}</h2>
+                <h2>Peso: {{product.peso}}lb</h2>
+                @if(product.fragil){
+                <h2>Fragil? Sí</h2>
+                }@else{
+                <h2>Fráfil? No</h2>
+                }
+                <h2>Costo del producto: ${{product.costo}}</h2>
+            </div>
+            }
+        </div>
         <div class="envio-content-row">
             <label for="">Nombre del producto</label>
             <input type="text">
         </div>
-        <div class="envio-content-row-btn">
+        <div class="envio-content-row2">
+            <label for="">Peso en libras</label>
+            <input type="text">
+        </div>
+        <div class="envio-content-row2">
+            <label for="">Es frágil?</label>
+            <select name="fragil" id="">
+                <option value="si">Sí</option>
+                <option value="no">No</option>
+            </select>
+        </div>
+        <div class="envio-content-row2">
+            <label for="">Precio</label>
+            <input type="text">
+        </div>
+        <div class="envio-content-row2">
+            <label for="">Total</label>
+            <input type="text">
+        </div>
+        <div class="envio-content-row2">
+            <button class="btnNext" (click)="nextStep()">Agregar</button>
+        </div>
+        <div class="envio-content-row2">
             <button class="btnNext" (click)="nextStep()">Guardar</button>
         </div>
     </div>
     }
-    <img src="assets/Path_14.png" class="footer">
+    <app-footer></app-footer>
 </div>
