--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,5 +4,5 @@
 <div class="footer-content">
     <img src="assets/history.png" alt="" routerLink="/historial">
     <img src="assets/add_package.png" alt="" routerLink="/envio-mx">
-    <img src="assets/report.png" alt="" routerLink="/reporte">
+    <img src="assets/report.png" alt="" routerLink="/caja">
 </div>
